# europepmc-mcp-server

./: .gitignore  CLI_USAGE_GUIDE.md  HUB_READY_SUMMARY.md  LICENSE  README.md  examples.md  pyproject.toml  requirements.txt  test_server.py
examples/: CLI_SEARCH_COMMANDS.md  CORRECTED_IMPLEMENTATION_DEMO.py  README.md  TEST_RESULTS_SUMMARY.md  advanced_search_example.py  demo_mcp_usage.py  find_fiona_watt_working.py  get_fiona_publications.py  test_api_basic.py  test_correct_format.py  test_corrected_implementation.py  test_direct_api.py  test_enhanced_filtering.py  test_field_syntax.py  test_fiona_core.py  test_fiona_corrected.py  test_fiona_detailed.py  test_fiona_embo.py  test_fiona_targeted.py  test_fiona_watt.py  test_mcp_cli.py  test_mcp_server_working.py
src/europepmc_server/: __init__.py  server.py
